app/assets/stylesheets/dashboard.css.scss
// Place all the styles related to the Dashboard controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.tlogo {
   font-family: Georgia,serif;
   font-weight: bold;
   font-size: 1.1em;
   color: #C4230E;
   background-color: white;
   padding: 0 5px;
   border-radius: 10px;
   border: 1px solid black;
}

.ologo {
   font-family: Georgia,serif;
   font-weight: bold;
   font-size: 1.1em;
   color: #139EBA;
   background-color: white;
   padding: 0 5px;
   border-radius: 10px;
   border: 1px solid black;
}

.glogo {
   font-family: Georgia,serif;
   font-weight: bold;
   font-size: 1.1em;
   color: #34730E;
   background-color: white;
   padding: 0 5px;
   border-radius: 10px;
   border: 1px solid black;
}

.small-label {
   font-size: 0.8em;
   vertical-align: sub;
}

.main-header {
   background-color: #500000;
   width:100%;
   height: 155px;
   border-bottom: 1px solid;
   margin-top: 2px;
   border-top: 1px solid;
   
   #idhmc-logo {
      float:left;
   }
   
   span {
      color: white;
      font-size: 2.5em;
      position: relative;
      top: 50px;
      left: 40px;
      font-weight: bolder;
   }
}

#dashboard-main {
   margin-top: 2px;
   border-top: 1px solid;
   padding-top:5px;
   padding-bottom:5px;
}

#ocr-summary {
   margin: 10px;
   border: 1px solid;
   border-collapse: collapse;
}

#detail-table_processing {
   border: none;
   color: black;
   box-shadow: 3px 3px 17px #333;
   background-color: #eee;
   outline: 1px solid;
}

#filter-table {
   font-size: 0.85em;
   margin-bottom: 15px;
   
   .filter-label {
      text-align: right;
   }
   
   span {
      margin-right: 5px;
   }
   
   #filter-ctls {
      text-align: right;
   }
}

#results-detail {
   padding:10px;
   
   #detail-table {
      font-size: 0.9em;
      border-spacing: 1px;
      background-color: #999;
      
      .narrow-col {
         width: 40px;
      }
      .medium-col {
         width: 55px;
      }
      .author-col {
         width: 180px;
      }
      .date-col {
         width: 80px;
      }
      .result-col {
         width: 50px;
      }
      .result-data {
         text-align: center;
      }
      
      .gale-row {
         background-color: #cec !important;
      }
      
   
      th {
         background-color: #679;
         color: #ededed;
         border:none;
         text-align: center;
         font-weight: normal;
      }
      
      .bad-cell {
         background-color: #900;
         color: #ffcece;
      }
      
      .warn-cell {
         background-color: #dd0;
      }
   }
   
   .sorting_desc {
      background: image-url("sort_desc.png") no-repeat center right;;
   }
   .sorting_asc {
      background: image-url("sort_asc.png") no-repeat center right;
   }
   .dataTables_length {
      font-size: 0.8em;
   }
   
   .dataTables_filter {
      margin-bottom: 10px;
      font-size: 0.8em;
   }
   .paging_full_numbers {
      font-size: 0.8em;
   }
   
   .dataTables_info {
      margin-top: 10px;
      font-size: 0.8em;
   }
   .dataTables_paginate {
      margin-top: 10px;
   }
}

